--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.13",
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
