--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/body-parser": "^1.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "debug": "^4.3.1",
+    "express": "^4.17.1",
+    "express-winston": "^4.0.5",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.13",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.6",
+    "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
 }
