new: add debug option

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon app.ts",
+    "debug": "export DEBUG=* && yarn dev",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
