--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Ntwari Clarance Liberiste",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon app.ts",
+    "dev": "nodemon",
     "debug": "export DEBUG=app && yarn dev",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1"
