--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
   "scripts": {
     "dev": "nodemon",
     "start": "tsc && node build/app.js",
-    "debug": "export DEBUG=app && yarn dev",
+    "debug": "export DEBUG=* && yarn dev",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/mongoose": "^5.10.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-winston": "^4.0.5",
-    "winston": "^3.3.3"
+    "mongoose": "^5.11.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
