adding bcrypt js

--- a/package.json
+++ b/package.json
@@ -6,27 +6,31 @@
   "author": "Ntwari Clarance Liberiste",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon --watch ./ ./app.ts",
+    "devjs": "node build/app.js",
     "start": "tsc && node build/app.js",
     "debug": "export DEBUG=* && yarn dev",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/dotenv": "^8.2.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/mongoose": "^5.10.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "mongoose": "^5.11.8"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.9",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
+    "@types/joi": "^14.3.4",
     "@types/node": "^14.14.13",
     "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
