--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
     "@types/joi": "^14.3.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.13",
     "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
