--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "Ntwari Clarance Liberiste",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --watch ./ ./app.ts",
-    "devjs": "node build/app.js",
-    "start": "tsc && node build/app.js",
+    "dev": "nodemon --watch ./ src/app.ts",
+    "devjs": "node build/src/app.js",
+    "start": "tsc && node build/src/app.js",
     "debug": "export DEBUG=* && yarn dev",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,7 +24,8 @@
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.8"
+    "mongoose": "^5.11.8",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
@@ -34,6 +35,8 @@
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.13",
+    "@types/pg": "^7.14.7",
+    "@types/pg-types": "^1.11.5",
     "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
