--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "outDir": "./build",
     "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
