--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "nodemon",
     "swagger": "tsoa spec",
-    "start": "tsc && node build/src/app.js",
+    "start": "tsc && node build/app.js",
     "debug": "export DEBUG=* && yarn dev",
     "build": "yarn swagger && tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,12 +18,9 @@
       "src"
     ],
     "ext": "ts",
-    "exec": "tsoa spec && ts-node src/app.ts"
+    "exec": "tsoa spec && ts-node app.ts"
   },
   "dependencies": {
-    "@prisma/client": "^2.13.1",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/mongoose": "^5.10.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -34,21 +31,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5",
     "swagger-ui-express": "^4.1.6",
     "tsoa": "^3.4.0"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.13.1",
-    "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.9",
-    "@types/debug": "^4.1.5",
-    "@types/express": "^4.17.9",
-    "@types/joi": "^14.3.4",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.14.13",
-    "@types/pg": "^7.14.7",
-    "@types/pg-types": "^1.11.5",
-    "@types/swagger-ui-express": "^4.1.2",
     "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
