--- a/package.json
+++ b/package.json
@@ -37,9 +37,6 @@
     "tsoa": "^3.4.0"
   },
   "devDependencies": {
-    "source-map-support": "^0.5.19",
-    "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.1.3"
+    "source-map-support": "^0.5.19"
   }
 }
