--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
-    "swagger-ui-express": "^4.1.6",
-    "tsoa": "^3.4.0"
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "source-map-support": "^0.5.19"
