--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "nodemon",
     "start": "app.js",
+    "sq": "sequelize",
     "debug": "export DEBUG=* && yarn dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -34,6 +35,7 @@
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
+    "sequelize-cli": "^6.2.0",
     "source-map-support": "^0.5.19"
   }
 }
