feat: docker and hot reloading

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3003:3000"
+      - "3000:3000"
     links:
       - mongo
       - postgres
@@ -16,6 +16,8 @@ services:
       - postgres
     env_file:
       - .env
+    volumes: 
+      - .:/app
   mongo:
     container_name: mongo
     image: mongo
