--- a/package.json
+++ b/package.json
@@ -46,7 +46,13 @@
     "@types/node-rsa": "1.1.1",
     "@types/pg": "8.6.1",
     "@types/sequelize": "4.28.10",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "2.0.12",
+    "prettier": "^2.3.2",
     "sequelize-cli": "6.2.0",
     "source-map-support": "0.5.19",
     "ts-node": "10.1.0",
