--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc --project ./build",
     "start": "node app.js",
     "sq": "sequelize",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "debug": "export DEBUG=* && yarn dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -58,5 +59,15 @@
     "ts-node": "10.1.0",
     "ts-node-dev": "1.1.8",
     "typescript": "4.3.5"
+  },
+  "husky": {
+      "hooks": {
+          "pre-commit": "lint-staged"
+      }
+  },
+  "lint-staged": {
+      "*.{js,ts,tsx}": [
+          "eslint --fix"
+      ]
   }
 }
